added delete section

--- a/src/components/FloatingInput.astro
+++ b/src/components/FloatingInput.astro
@@ -43,7 +43,8 @@ const { id, label, type = "text", value = "" } = Astro.props;
     id={id} 
     type={type} 
     value={value} 
-    placeholder=" "  
+    placeholder=" " 
+    name={id} 
   />
   <label for={id}>{label}</label>
 </div>
